--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.17.1",
     "pg": "^8.13.1",
     "dotenv": "^16.0.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "archiver": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
