--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "jest Tests/app.test.js"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -13,6 +14,8 @@
     "archiver": "^5.3.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "eslint": "^8.6.0",
+    "jest": "^29.0.0"
   }
 }
