--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "eslint": "^8.6.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "supertest": "^6.1.3"
   }
 }
