--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/
 # Ignore log files
 *.log
 
+
 # Ignore environment variable files
 .env
 
@@ -22,6 +23,9 @@ Thumbs.db
 # Ignore IDE-specific files
 .vscode/
 .idea/
+.idea
+.idea\
+.idea\.idea.GameServer-1.dir\.idea
 *.iml
 
 # Ignore settings files
